feat: add meta tags for sharing

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "/"
+baseURL = "https://workshop.superwerker.cloud/"
 languageCode = "en-US"
 defaultContentLanguage = "en"
 
@@ -10,6 +10,7 @@ uglyurls = "true"
 enableEmoji = true
 
 [params]
+  twitter = "@superluminar"
   # Prefix URL to edit current page. Will display an "Edit this page" button on top right hand corner of every page. 
   # Useful to give opportunity to people to create merge request for your doc.
   # See the config.toml file from this documentation site to have an example.
